# cpu_gpu_benchmarking

./: .gitignore  CMakeLists.txt  build.sh  create_program.py  main.F90  plot.py  run.sh  time.py
